--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -25,4 +25,4 @@ jobs:
       
       - name: Run tests
         run: |
-         venv/bin/pytest --maxfail=1 --disable-warnings --tb=short
+         venv/bin/pytest --maxfail=1 --disable-warnings --exitfirst --verbose
