--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -19,10 +19,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-         python -m venv venv
-         venv/bin/pip install --upgrade pip
-         venv/bin/pip install -r requirements.txt
-      
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Run tests
-        run: |
-         venv/bin/pytest --maxfail=1 --disable-warnings --exitfirst --verbose
+        run: pytest
