--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -25,6 +25,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd fastapi-book-project
+            git stash
             git pull origin main
             source venv/bin/activate
             pip install -r requirements.txt
