--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout respository
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
  
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
@@ -25,5 +25,6 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: |
-          source venv/bin/activate
-          pytest
+         set -e 
+         source venv/bin/activate
+         pytest --maxfail=1 --disable-warnings --exitfirst --verbose
